--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Lesson2/Sample2/.vs/Sample2/v17
 /Lesson2/Sample3/.vs/Sample3/v17
 /Lesson2/Sample4/.vs/Sample4/v17
+/Lesson2/Sample5/.vs/Sample5/v17
