--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /Lesson2/Sample3/.vs/Sample3/v17
 /Lesson2/Sample4/.vs/Sample4/v17
 /Lesson2/Sample5/.vs/Sample5/v17
+/Lesson2/Sample6/.vs/Sample6/v17
