--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Lesson2/Sample4/.vs/Sample4/v17
 /Lesson2/Sample5/.vs/Sample5/v17
 /Lesson2/Sample6/.vs/Sample6/v17
+/Lesson3/Sample1/.vs/Sample1/v17
