--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /Lesson2/Sample5/.vs/Sample5/v17
 /Lesson2/Sample6/.vs/Sample6/v17
 /Lesson3/Sample1/.vs/Sample1/v17
+/Lesson3/Sample2/.vs/Sample2/v17
