--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Lesson2/Sample6/.vs/Sample6/v17
 /Lesson3/Sample1/.vs/Sample1/v17
 /Lesson3/Sample2/.vs/Sample2/v17
+/Lesson3/Sample3/.vs/Sample3/v17
