--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Lesson3/Sample1/.vs/Sample1/v17
 /Lesson3/Sample2/.vs/Sample2/v17
 /Lesson3/Sample3/.vs/Sample3/v17
+/Lesson3/Sample4/.vs/Sample4/v17
