--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /Lesson3/Sample3/.vs/Sample3/v17
 /Lesson3/Sample4/.vs/Sample4/v17
 /Lesson3/Sample5/.vs/Sample5/v17
+/Lesson3/Sample6/.vs/Sample6/v17
