--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /Lesson3/Sample4/.vs/Sample4/v17
 /Lesson3/Sample5/.vs/Sample5/v17
 /Lesson3/Sample6/.vs/Sample6/v17
+/Lesson3/Sample7/.vs/Sample7/v17
