--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@
 /Lesson3/Sample5/.vs/Sample5/v17
 /Lesson3/Sample6/.vs/Sample6/v17
 /Lesson3/Sample7/.vs/Sample7/v17
+/Lesson4/Sample1/.vs/Sample1/v17
+/Lesson4/Sample2/.vs/Sample2/v17
+/Lesson4/Sample3/.vs/Sample3/v17
