--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /Lesson4/Sample1/.vs/Sample1/v17
 /Lesson4/Sample2/.vs/Sample2/v17
 /Lesson4/Sample3/.vs/Sample3/v17
+/Lesson4/Sample4/.vs/Sample4/v17
