--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /Lesson4/Sample2/.vs/Sample2/v17
 /Lesson4/Sample3/.vs/Sample3/v17
 /Lesson4/Sample4/.vs/Sample4/v17
+/Lesson4/Sample5/.vs/Sample5/v17
