--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /Lesson4/Sample3/.vs/Sample3/v17
 /Lesson4/Sample4/.vs/Sample4/v17
 /Lesson4/Sample5/.vs/Sample5/v17
+/Lesson4/Sample6/.vs/Sample6/v17
