--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /Lesson4/Sample4/.vs/Sample4/v17
 /Lesson4/Sample5/.vs/Sample5/v17
 /Lesson4/Sample6/.vs/Sample6/v17
+/Lesson4/Sample7/.vs/Sample7/v17
+/Lesson4/.vs/Lesson4/v17
