--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@
 /Lesson4/Sample9/.vs/Sample9/v17
 /Lesson4/Sample11/.vs/Sample11/v17
 /Lesson5/Sample1/.vs/Sample1/v17
+/Lesson5/Sample2/.vs/Sample2/v17
