--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@
 /Lesson4/Sample11/.vs/Sample11/v17
 /Lesson5/Sample1/.vs/Sample1/v17
 /Lesson5/Sample2/.vs/Sample2/v17
+/Lesson5/Sample3/.vs/Sample3/v17
