--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@
 /Lesson5/Sample1/.vs/Sample1/v17
 /Lesson5/Sample2/.vs/Sample2/v17
 /Lesson5/Sample3/.vs/Sample3/v17
+/Lesson5/Sample4/.vs/Sample4/v17
