--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@
 /Lesson5/Sample2/.vs/Sample2/v17
 /Lesson5/Sample3/.vs/Sample3/v17
 /Lesson5/Sample4/.vs/Sample4/v17
+/Lesson5/Sample5/.vs/Sample5/v17
