--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 /Lesson5/Sample3/.vs/Sample3/v17
 /Lesson5/Sample4/.vs/Sample4/v17
 /Lesson5/Sample5/.vs/Sample5/v17
+/Lesson5/Sample6/.vs/Sample6/v17
