--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@
 /Lesson5/Sample4/.vs/Sample4/v17
 /Lesson5/Sample5/.vs/Sample5/v17
 /Lesson5/Sample6/.vs/Sample6/v17
+/Lesson5/Sample7/.vs/Sample7/v17
