--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@
 /Lesson5/Sample5/.vs/Sample5/v17
 /Lesson5/Sample6/.vs/Sample6/v17
 /Lesson5/Sample7/.vs/Sample7/v17
+/Lesson6/Sample1/.vs/Sample1/v17
