--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 /Lesson5/Sample6/.vs/Sample6/v17
 /Lesson5/Sample7/.vs/Sample7/v17
 /Lesson6/Sample1/.vs/Sample1/v17
+/Lesson6/Sample2/.vs/Sample2/v17
