--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@
 /Lesson5/Sample7/.vs/Sample7/v17
 /Lesson6/Sample1/.vs/Sample1/v17
 /Lesson6/Sample2/.vs/Sample2/v17
+/Lesson6/Sample3/.vs/Sample3/v17
