--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@
 /Lesson6/Sample1/.vs/Sample1/v17
 /Lesson6/Sample2/.vs/Sample2/v17
 /Lesson6/Sample3/.vs/Sample3/v17
+/Lesson6/Sample4/.vs/Sample4/v17
