--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@
 /Lesson6/Sample2/.vs/Sample2/v17
 /Lesson6/Sample3/.vs/Sample3/v17
 /Lesson6/Sample4/.vs/Sample4/v17
+/Lesson6/Sample5/.vs/Sample5/v17
