--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@
 /Lesson6/Sample3/.vs/Sample3/v17
 /Lesson6/Sample4/.vs/Sample4/v17
 /Lesson6/Sample5/.vs/Sample5/v17
+/Lesson6/Sample7/.vs/Sample7/v17
