--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@
 /Lesson6/Sample4/.vs/Sample4/v17
 /Lesson6/Sample5/.vs/Sample5/v17
 /Lesson6/Sample7/.vs/Sample7/v17
+/Lesson6/Sample6/.vs/Sample6/v17
