--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@
 /Lesson6/Sample5/.vs/Sample5/v17
 /Lesson6/Sample7/.vs/Sample7/v17
 /Lesson6/Sample6/.vs/Sample6/v17
+/Lesson6/Sample8/.vs/Sample8/v17
