--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@
 /Lesson6/Sample7/.vs/Sample7/v17
 /Lesson6/Sample6/.vs/Sample6/v17
 /Lesson6/Sample8/.vs/Sample8/v17
+/Lesson6/Sample9/.vs/Sample9/v17
