--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@
 /Lesson6/Sample6/.vs/Sample6/v17
 /Lesson6/Sample8/.vs/Sample8/v17
 /Lesson6/Sample9/.vs/Sample9/v17
+/Lesson6/Sample10/.vs/Sample10/v17
