--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@
 /Lesson6/Sample8/.vs/Sample8/v17
 /Lesson6/Sample9/.vs/Sample9/v17
 /Lesson6/Sample10/.vs/Sample10/v17
+/Lesson6/Sample11/.vs/Sample11/v17
