--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@
 /Lesson6/Sample9/.vs/Sample9/v17
 /Lesson6/Sample10/.vs/Sample10/v17
 /Lesson6/Sample11/.vs/Sample11/v17
+/Lesson6/Sample12/.vs/Sample12/v17
