--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@
 /Lesson6/Sample10/.vs/Sample10/v17
 /Lesson6/Sample11/.vs/Sample11/v17
 /Lesson6/Sample12/.vs/Sample12/v17
+/Lesson7/Sample1/.vs/Sample1/v17
