--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,4 @@
 /Lesson6/Sample11/.vs/Sample11/v17
 /Lesson6/Sample12/.vs/Sample12/v17
 /Lesson7/Sample1/.vs/Sample1/v17
+/Lesson7/Sampel2/.vs/Sampel2/v17
