--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@
 /Lesson6/Sample12/.vs/Sample12/v17
 /Lesson7/Sample1/.vs/Sample1/v17
 /Lesson7/Sampel2/.vs/Sampel2/v17
+/Lesson7/Sample3/.vs/Sample3/v17
