--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@
 /Lesson7/Sample1/.vs/Sample1/v17
 /Lesson7/Sampel2/.vs/Sampel2/v17
 /Lesson7/Sample3/.vs/Sample3/v17
+/Lesson7/Sample4/.vs/Sample4/v17
