--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@
 /Lesson7/Sampel2/.vs/Sampel2/v17
 /Lesson7/Sample3/.vs/Sample3/v17
 /Lesson7/Sample4/.vs/Sample4/v17
+/Lesson7/Sample5/.vs/Sample5/v17
