--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@
 /Lesson7/Sample5/.vs/Sample5/v17
 /Lesson7/Sample6/.vs/Sample6/v17
 /Lesson7/Sample6/.vs/Sample6/FileContentIndex
+/Lesson7/Sample7/.vs/Sample7
