--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@
 /Lesson7/Sample6/.vs/Sample6/v17
 /Lesson7/Sample6/.vs/Sample6/FileContentIndex
 /Lesson7/Sample7/.vs/Sample7
+/Lesson7/Sample8/.vs/Sample8/v17
