--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@
 /Lesson7/Sample6/.vs/Sample6/FileContentIndex
 /Lesson7/Sample7/.vs/Sample7
 /Lesson7/Sample8/.vs/Sample8/v17
+/Lesson7/Sample9/.vs/Sample9
