--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@
 /Lesson7/Sample8/.vs/Sample8/v17
 /Lesson7/Sample9/.vs/Sample9
 /Lesson7/Sample10/.vs/Sample10
+/Lesson7/Sample11/.vs/Sample11/v17
