--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@
 /Lesson7/Sample10/.vs/Sample10
 /Lesson7/Sample11/.vs/Sample11/v17
 /Lesson7/Sample12/.vs/Sample12
+/Lesson7/Sample13/.vs/Sample13
