--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@
 /Lesson8/Sample2/.vs/Sample2
 /Lesson8/Sample3/.vs/Sample3/v17
 /Lesson8/Sample4/.vs/Sample4
+/Lesson5/.vs
+/Lesson8/Sample5/.vs/Sample5/v17
+/Lesson8/Sample5/.vs/Sample5/FileContentIndex
