--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@
 /Lesson8/Sample5/.vs/Sample5/v17
 /Lesson8/Sample5/.vs/Sample5/FileContentIndex
 /Lesson8/Sample6/.vs/Sample6
+/Lesson8/Sample7/.vs/Sample7/v17
