--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@
 /Lesson8/Sample9/.vs/Sample9
 /Lesson9/Sample1/.vs/Sample1/v17
 /Lesson9/Sample2/.vs/Sample2/v17
+/Lesson9/Sample3/.vs/Sample3/v17
