--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@
 /Lesson9/Sample1/.vs/Sample1/v17
 /Lesson9/Sample2/.vs/Sample2/v17
 /Lesson9/Sample3/.vs/Sample3/v17
+/Lesson9/Sample4/.vs/Sample4/v17
