--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@
 /Lesson9/Sample2/.vs/Sample2/v17
 /Lesson9/Sample3/.vs/Sample3/v17
 /Lesson9/Sample4/.vs/Sample4/v17
+/Lesson9/Sample5/.vs/Sample5/v17
