--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@
 /Lesson9/Sample3/.vs/Sample3/v17
 /Lesson9/Sample4/.vs/Sample4/v17
 /Lesson9/Sample5/.vs/Sample5/v17
+/Lesson9/Sample6/.vs/Sample6/v17
