--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@
 /Lesson9/Sample4/.vs/Sample4/v17
 /Lesson9/Sample5/.vs/Sample5/v17
 /Lesson9/Sample6/.vs/Sample6/v17
+/Lesson9/Sample7/.vs/Sample7/v17
