--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@
 /Lesson9/Sample5/.vs/Sample5/v17
 /Lesson9/Sample6/.vs/Sample6/v17
 /Lesson9/Sample7/.vs/Sample7/v17
+/Lesson9/Sample7-2/.vs/Sample7-2/v17
