--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@
 /Lesson9/Sample6/.vs/Sample6/v17
 /Lesson9/Sample7/.vs/Sample7/v17
 /Lesson9/Sample7-2/.vs/Sample7-2/v17
+/Lesson9/Sample8/.vs/Sample8/v17
