--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@
 /Lesson9/Sample7/.vs/Sample7/v17
 /Lesson9/Sample7-2/.vs/Sample7-2/v17
 /Lesson9/Sample8/.vs/Sample8/v17
+/Lesson9/Sample9/.vs/Sample9/v17
