--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@
 /Lesson9/Sample8/.vs/Sample8/v17
 /Lesson9/Sample9/.vs/Sample9/v17
 /Lesson9/Sample10/.vs/Sample10/v17
+/Lesson9/Sample11/.vs/Sample11/v17
