--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@
 /Lesson9/Sample9/.vs/Sample9/v17
 /Lesson9/Sample10/.vs/Sample10/v17
 /Lesson9/Sample11/.vs/Sample11/v17
+/Lesson9/Sample12/.vs/Sample12/v17
