--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@
 /Lesson9/Sample10/.vs/Sample10/v17
 /Lesson9/Sample11/.vs/Sample11/v17
 /Lesson9/Sample12/.vs/Sample12/v17
+/Lesson10/Sample/.vs/Sample/v17
