--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@
 /Lesson9/Sample11/.vs/Sample11/v17
 /Lesson9/Sample12/.vs/Sample12/v17
 /Lesson10/Sample/.vs/Sample/v17
+/Lesson10/Sample2/.vs/Sample2/v17
