--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@
 /Lesson9/Sample12/.vs/Sample12/v17
 /Lesson10/Sample/.vs/Sample/v17
 /Lesson10/Sample2/.vs/Sample2/v17
+/Lesson10/Sample3/.vs/Sample3/v17
