--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,4 @@
 /Lesson10/Sample/.vs/Sample/v17
 /Lesson10/Sample2/.vs/Sample2/v17
 /Lesson10/Sample3/.vs/Sample3/v17
+/Lesson10/Sample4/.vs/Sample4/v17
