--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@
 /Lesson10/Sample2/.vs/Sample2/v17
 /Lesson10/Sample3/.vs/Sample3/v17
 /Lesson10/Sample4/.vs/Sample4/v17
+/Lesson10/Sample5/.vs/Sample5/v17
