--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@
 /Lesson10/Sample4/.vs/Sample4/v17
 /Lesson10/Sample5/.vs/Sample5/v17
 /Lesson11/Sample1/.vs/Sample1/v17
+/Lesson11/Sample2/.vs/Sample2/v17
