--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,4 @@
 /Lesson10/Sample5/.vs/Sample5/v17
 /Lesson11/Sample1/.vs/Sample1/v17
 /Lesson11/Sample2/.vs/Sample2/v17
+/Lesson11/Sample3/.vs/Sample3/v17
