--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@
 /Lesson11/Sample1/.vs/Sample1/v17
 /Lesson11/Sample2/.vs/Sample2/v17
 /Lesson11/Sample3/.vs/Sample3/v17
+/Lesson11/Sample4/.vs/Sample4/v17
