--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,4 @@
 /Lesson11/Sample2/.vs/Sample2/v17
 /Lesson11/Sample3/.vs/Sample3/v17
 /Lesson11/Sample4/.vs/Sample4/v17
+/Lesson11/Sample5/.vs/Sample5/v17
