--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,4 @@
 /Lesson11/Sample3/.vs/Sample3/v17
 /Lesson11/Sample4/.vs/Sample4/v17
 /Lesson11/Sample5/.vs/Sample5/v17
+/Lesson11/Sample6/.vs/Sample6/v17
