--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,4 @@
 /Lesson11/Sample4/.vs/Sample4/v17
 /Lesson11/Sample5/.vs/Sample5/v17
 /Lesson11/Sample6/.vs/Sample6/v17
+/Lesson11/Sample7/.vs/Sample7/v17
