--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@
 /Lesson11/Sample5/.vs/Sample5/v17
 /Lesson11/Sample6/.vs/Sample6/v17
 /Lesson11/Sample7/.vs/Sample7/v17
+/Lesson12/Sample1/.vs/Sample1/v17
