--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@
 /Lesson11/Sample6/.vs/Sample6/v17
 /Lesson11/Sample7/.vs/Sample7/v17
 /Lesson12/Sample1/.vs/Sample1/v17
+/Lesson12/Sample2/.vs/Sample2/v17
