--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,4 @@
 /Lesson12/Sample1/.vs/Sample1/v17
 /Lesson12/Sample2/.vs/Sample2/v17
 /Lesson12/Sample3/.vs/Sample3/v17
+/Lesson12/Sample4/.vs/Sample4/v17
