--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,4 @@
 /Lesson12/Sample2/.vs/Sample2/v17
 /Lesson12/Sample3/.vs/Sample3/v17
 /Lesson12/Sample4/.vs/Sample4/v17
+/Lesson12/Sample5/.vs/Sample5/v17
