--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,5 @@
 /Lesson12/Sample3/.vs/Sample3/v17
 /Lesson12/Sample4/.vs/Sample4/v17
 /Lesson12/Sample5/.vs/Sample5/v17
+/Lesson13/.vs
+/Lesson13/Sample1/.vs/Sample1/v17
