--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@
 /Lesson13/Sample1/.vs/Sample1/v17
 /Lesson13/Sample2/.vs/Sample2/v17
 /Lesson13/Sample3/.vs/Sample3/v17
+/Lesson13/Sample4/.vs/Sample4/v17
