--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@
 /Lesson13/Sample2/.vs/Sample2/v17
 /Lesson13/Sample3/.vs/Sample3/v17
 /Lesson13/Sample4/.vs/Sample4/v17
+/Lesson13/Sample5/.vs/Sample5/v17
