--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@
 /Lesson13/Sample3/.vs/Sample3/v17
 /Lesson13/Sample4/.vs/Sample4/v17
 /Lesson13/Sample5/.vs/Sample5/v17
+/Lesson13/Sample6/.vs/Sample6/v17
