--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@
 /Lesson13/Sample4/.vs/Sample4/v17
 /Lesson13/Sample5/.vs/Sample5/v17
 /Lesson13/Sample6/.vs/Sample6/v17
+/Lesson14/Sample1/.vs/Sample1/v17
