--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,4 @@
 /Lesson13/Sample5/.vs/Sample5/v17
 /Lesson13/Sample6/.vs/Sample6/v17
 /Lesson14/Sample1/.vs/Sample1/v17
+/Lesson14/Sample2/.vs/Sample2/v17
