--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,4 @@
 /Lesson13/Sample6/.vs/Sample6/v17
 /Lesson14/Sample1/.vs/Sample1/v17
 /Lesson14/Sample2/.vs/Sample2/v17
+/Lesson14/Sample3/.vs/Sample3/v17
