--- a/.gitignore
+++ b/.gitignore
@@ -111,3 +111,4 @@
 /Lesson14/Sample1/.vs/Sample1/v17
 /Lesson14/Sample2/.vs/Sample2/v17
 /Lesson14/Sample3/.vs/Sample3/v17
+/Lesson14/Sample4/.vs/Sample4/v17
