--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@
 /Lesson14/Sample2/.vs/Sample2/v17
 /Lesson14/Sample3/.vs/Sample3/v17
 /Lesson14/Sample4/.vs/Sample4/v17
+/Lesson14/Sample5/.vs/Sample5/v17
