--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,4 @@
 /Lesson14/Sample3/.vs/Sample3/v17
 /Lesson14/Sample4/.vs/Sample4/v17
 /Lesson14/Sample5/.vs/Sample5/v17
+/Lesson14/Sample6/.vs/Sample6/v17
