--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,4 @@
 /Lesson14/Sample4/.vs/Sample4/v17
 /Lesson14/Sample5/.vs/Sample5/v17
 /Lesson14/Sample6/.vs/Sample6/v17
+/Lesson14/Sample7/.vs/Sample7/v17
