--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,4 @@
 /Lesson14/Sample6/.vs/Sample6/v17
 /Lesson14/Sample7/.vs/Sample7/v17
 /Lesson14/Sample8/.vs/Sample8/v17
+/Lesson14/Sample9/.vs/Sample9
