--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,4 @@
 /Lesson14/Sample7/.vs/Sample7/v17
 /Lesson14/Sample8/.vs/Sample8/v17
 /Lesson14/Sample9/.vs/Sample9
+/Lesson14/Sample10/.vs/Sample10/v17
