--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,4 @@
 /Lesson14/Sample8/.vs/Sample8/v17
 /Lesson14/Sample9/.vs/Sample9
 /Lesson14/Sample10/.vs/Sample10/v17
+/Lesson15/Sample1/.vs/Sample1/v17
