--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,4 @@
 /Lesson14/Sample9/.vs/Sample9
 /Lesson14/Sample10/.vs/Sample10/v17
 /Lesson15/Sample1/.vs/Sample1/v17
+/Lesson15/Sample2/.vs/Sample2/v17
