--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,4 @@
 /Lesson14/Sample10/.vs/Sample10/v17
 /Lesson15/Sample1/.vs/Sample1/v17
 /Lesson15/Sample2/.vs/Sample2/v17
+/Lesson15/Sample3/.vs/Sample3/v17
