--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,4 @@
 /Lesson15/Sample1/.vs/Sample1/v17
 /Lesson15/Sample2/.vs/Sample2/v17
 /Lesson15/Sample3/.vs/Sample3/v17
+/Lesson15/Sample4/.vs/Sample4/v17
